# MSRating

./: .gitignore  app.py  docker-compose.yml  pyproject.toml
src/: app.py
src/config/: __init__.py  base.py
src/infra/: chache.py  enums.py  logging_config.py  login_manager.py
src/infra/database/: __init__.py  database.py
src/infra/models/: __init__.py  games.py  players.py  rating.py  users.py
src/infra/repositories/: base.py  games.py  players.py  users.py
src/service/: login.py  players.py  users.py
src/service/dto/: errors.py  players.py  users.py
src/utils/: deprecated_utils.py  hash.py  textsearch.py
src/view/: __init__.py
src/view/admin/: __init__.py  users.py
src/view/api/: __init__.py  login.py  new.py  players.py  rating.py
src/view/pages/: __init__.py  admin.py  base.py  games.py  home.py  login.py  new.py  player_stats.py  rating.py
static/css/: styles.css
static/js/: scripts.js
static/new_game/: index.html
static/new_game/components/: ActionsMenu.js  NicknameEditor.js  RoleSelector.js  TableRow.js
static/new_game/config/: constants.js
static/new_game/js/: app.js
static/new_game/styles/: styles.css
templates/: admin_add_gg.html  base.html  compare.html  error.html  index.html  login.html  new.html  player.html  rating.html  register.html  saved_games.html
