[project]
name = "msrating"
version = "0.1.0"
description = "Веб приложение на Flask, для подсчёта рейтинга внутри клуба MafiaStyle"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "cyrtranslit>=1.1.1",
    "dogpile-cache>=1.3.4",
    "fastapi>=0.115.11",
    "fastapi-login>=1.10.3",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-pydantic-api[serializer]>=0.10.0",
    "flask-pydantic-openapi>=0.4.2",
    "flask-sqlalchemy>=3.1.1",
    "mysqlclient>=2.2.7",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.20",
    "pytz>=2025.1",
    "rapidfuzz>=3.12.2",
    "requests>=2.32.3",
    "setuptools>=76.0.0",
    "starlette-admin>=0.14.1",
    "trans>=2.1.0",
    "transliterate>=1.10.2",
    "unidecode>=1.3.8",
    "uvicorn>=0.34.0",
]

[tool.ruff]
target-version = "py312"

lint.select = ["E", "F", "I", "C", "W"]

lint.ignore = []

lint.extend-ignore = ["C901", "F403"]

line-length = 120
